# litterbox

./: .gitignore  CLAUDE.md  Cargo.toml  license.txt  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
docs/: filters.md  todo.md
local_test/: go.mod  write_file  write_file.go
src/: cli_args.rs  fd_utils.rs  filter_listener.rs  filter_loader.rs  flags.rs  main.rs  regs.rs  scan_config.rs  scan_events.rs  simple_logger.rs  strace.rs  syscall_args.rs  syscall_common.rs  syscall_event.rs  syscall_filter.rs  syscall_ids.rs  syscall_logger.rs  syscall_parser.rs  syscall_parsers_file.rs  syscall_parsers_process.rs  syscall_parsers_socket.rs  trace_process.rs
src/filters/: address_matcher.rs  argument_matcher.rs  context_matcher.rs  dto.rs  flag_matcher.rs  matcher.rs  mod.rs  path_matcher.rs  str_matcher.rs  syscall_filter.rs  syscall_names_aarch64.rs  syscall_names_x86_64.rs  utils.rs
src/loggers/: jsonl_logger.rs  mod.rs  syscall_logger.rs  text_logger.rs
src/parsers/: mod.rs  syscall_parser.rs  syscall_parsers_process.rs  syscall_parsers_socket.rs
src/preconfigured/: default.rs  mod.rs  permissive.rs  preconfigured_filters_aarch64.rs  restrictive.rs
src/sandbox/: mod.rs  sandbox_aarch64.rs  sandbox_filter.rs  sandbox_network.rs  sandbox_process.rs  sandbox_read_filter.rs  sandbox_system.rs  sandbox_write_filter.rs
src/syscall_parsers_file/: common.rs  delete.rs  file_ops.rs  mod.rs  open_close.rs  rw.rs
src/tests/: address_matcher_test.rs  custom_filter_tests.rs  dto_tests.rs  filter_deserialization_test.rs  flags_matcher_test.rs  (+6 more)
(+9 files in other folders)
