[package]
name = "litterbox"
version = "0.1.0"
edition = "2024"

[dependencies]
exec = "0.3.1"
nix = { version ="0.30.1", features = ["ptrace", "process", "fs"]}
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
syscall-numbers = "4.0.2"
rclip-cmd = "0.0.4"
