[package]
name = "litterbox"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
exec = "0.3.1"
nix = { version = "0.30.1", features = ["ptrace", "process", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strmode = "1.0.0"
syscall-numbers = "4.0.2"
